corrected view collapse due to class-name overlap

--- a/app/assets/stylesheets/_exhibitions.scss
+++ b/app/assets/stylesheets/_exhibitions.scss
@@ -43,7 +43,7 @@ html,body {
     margin-bottom: 10px;
   }
 
-  .wrapper {
+  .exhibitions-wrapper {
     background-color: white;
     height: 100%;
     width: 50%;
